<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".baocaotinhtrangActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTinhTrangTB"
        app:titleTextColor="@color/colorWhite"
        app:title="@string/tinhtrangthietbi"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvmanhinh"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvmanhinh"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/manhinh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/cbmanhinh"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/danghoatdong"
                    android:checked="true"
                    android:button="@drawable/custom_checkthietbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvchuot"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/mouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvchuot"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/chuot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/cbchuot"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/danghoatdong"
                    android:checked="true"
                    android:button="@drawable/custom_checkthietbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvcpu"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/casecpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvcpu"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/cpu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/cbcpu"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/danghoatdong"
                    android:checked="true"
                    android:button="@drawable/custom_checkthietbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvbanphim"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/keyboard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvbanphim"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/banphim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/cbbanphim"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/danghoatdong"
                    android:checked="true"
                    android:button="@drawable/custom_checkthietbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imvos"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/os"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@+id/imvos"
                    android:textSize="17dp"
                    android:textColor="#000"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:text="@string/hedieuhanh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <CheckBox
                    android:id="@+id/cbbos"
                    android:layout_centerInParent="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:text="@string/danghoatdong"
                    android:checked="true"
                    android:button="@drawable/custom_checkthietbi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="18dp"
                android:text="@string/phanmem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/tenphanmem"
                android:id="@+id/edtphanmem"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="18dp"
                android:text="@string/khac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:hint="@string/bophankhac"
                android:id="@+id/edtkhac"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btngiuibaocao"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:textColor="#fff"
                android:background="@drawable/custom_button_guibaocao"
                android:text="@string/guibaocao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>




</LinearLayout>