<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorbackground">

    <android.support.v7.widget.CardView
        android:foreground="?attr/selectableItemBackground"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_margin="4dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_marginBottom="5dp"
                android:id="@+id/tvtenphongmay"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="PHÒNG MÁY 1"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#0227b7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:padding="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="@string/khu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvkhu"
                            android:layout_marginLeft="10dp"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="A"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="@string/lau"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvlau"
                            android:layout_marginLeft="10dp"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="06"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:textStyle="bold"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="@string/phong"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/tvphongrow"
                            android:layout_marginLeft="10dp"
                            android:textSize="18dp"
                            android:textColor="#000"
                            android:text="207"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>