<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/background"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_marginRight="5dp"
                        android:src="@drawable/default_user"
                        android:id="@+id/imvhinhnenMain"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp"
                        android:layout_width="100dp"
                        android:layout_height="100dp" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tvHoTenMain"
                            android:layout_gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dp"
                            android:text="Chào!"
                            android:textColor="#000"
                            android:textSize="20dp"
                            android:layout_centerVertical="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                        <Button
                            android:id="@+id/btnDangXuat"
                            android:background="#00000000"
                            android:layout_marginRight="15dp"
                            android:layout_marginBottom="5dp"
                            android:drawablePadding="5dp"
                            android:drawableLeft="@drawable/logout"
                            android:textAllCaps="false"
                            android:text="@string/dangxuat"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp" />
                    </RelativeLayout>


                </LinearLayout>



            </RelativeLayout>

            <LinearLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <!--TÀI KHOẢN-->
                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewTaiKhoan"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/user" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thongtintaikhoan"
                            android:textColor="#000"
                            android:textSize="17dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--QUÉT MÃ MÁY-->
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="5dp"
                    android:id="@+id/cardviewQRCode"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/search" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quetmamay"
                            android:textColor="#000"
                            android:textSize="17dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--PHÒNG MÁY-->
                <android.support.v7.widget.CardView
                    android:layout_marginBottom="5dp"
                    android:id="@+id/cardviewPhong"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/door" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phongmay"
                            android:textColor="#000"
                            android:textSize="17dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--CÀI ĐẶT-->
                <android.support.v7.widget.CardView
                    android:id="@+id/cardviewCaiDat"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="5dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/setting" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/caidat"
                            android:textColor="#000"
                            android:textSize="17dp" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>


            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>




</LinearLayout>